--- a/dev_inventory_ageing_report/wizard/inventory_wizard_view.xml
+++ b/dev_inventory_ageing_report/wizard/inventory_wizard_view.xml
@@ -16,7 +16,7 @@
                             <field name="date_from"/>
                             <field name="filter_by"/>
                             <field name="category_id" 
-                                attrs="{'invisible':[('filter_by','!=','by_category')],'required':[('filter_by','=','by_category')]}" />
+                                attrs="{'invisible':[('filter_by','!=','by_category')],'required':[('filter_by','=','by_category')]}"/>
                         </group>
                     </group>
                     <group string="Location">
@@ -27,7 +27,7 @@
                         attrs="{'invisible':[('filter_by','!=','by_product')],'required':[('filter_by','=','by_product')]}"     widget="many2many_tags"/>
                     </group>
                     <footer>
-                       
+			<button string="Print PDF" name="print_pdf" type="object" class="oe_highlight" icon="fa-print" /> or
                         <button string="Print Excel" name="print_excel" type="object" class="oe_highlight"/>
                         or
                         <button string="Cancel" class="oe_link" special="cancel"/>
@@ -46,8 +46,6 @@
             <field name="context">{}</field>
             <field name="target">new</field>
         </record>
-
-        
         
         
         <menuitem id="menu_dev_inventory_wizard"
